fixed click on burger menu and languages

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -195,3 +195,13 @@
 		padding-top: 0;
 	}
 }
+
+h5.footer__follow {
+	color: transparent;
+}
+
+@media (min-width: 767.98px) {
+	h5.footer__follow {
+		color: #9B99AD;
+	}
+}
