--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -168,10 +168,16 @@
 
 	&__languages-btn {
 		color: $white-color;
-		display: flex;
+		display: inline-flex;
 		align-items: center;
 		padding: 12px 14px;
 		text-transform: capitalize;
+		border: 1px solid transparent;
+		border-radius: 5px;
+
+		&.active {
+			border-color: rgba(155, 153, 173, .2);
+		}
 
 		img, svg {
 			display: inline-block;
@@ -217,6 +223,22 @@
 		span {
 			margin-left: 7px;
 		}
+		&.hidden {
+			display: none!important;
+			+.header__buttons-text {
+				display: block;
+			}
+		}
+	}
+
+	&__buttons-text {
+		display: none;
+		color: $white-color;
+		text-transform: uppercase;
+		font-weight: 900;
+		font-size: 12px;
+		line-height: 14px;
+		padding: 13px;
 	}
 
 	&__buttons-login {
